force-app/main/default/objects/Recommendation_Config__mdt/Recommendation_Config__mdt.object-meta.xml
<CustomObject>
    <label>Recommendation Config</label>
    <pluralLabel>Recommendation Configs</pluralLabel>
</CustomObject>