force-app/main/default/objects/Recommendation_Config__mdt/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>