force-app/main/default/objects/Recommendation_Config__mdt/fields/Recommendation_Text__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Text__c</fullName>
    <label>Recommendation Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>