force-app/main/default/objects/Recommendation_Config__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>